<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_safety1_id"
    android:background="#FFFFFF"
    tools:context=".Saftey1">


        <RelativeLayout
            android:layout_width="match_parent"

            android:layout_height="match_parent">

            <include
                android:id="@+id/header_id"
                layout="@layout/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp" />

            <ImageView
                android:id="@+id/icon1"
                android:layout_width="122dp"
                android:layout_height="120dp"
                android:layout_below="@+id/header_id"
                android:layout_alignParentStart="true"
                android:layout_marginStart="143dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/suffocation" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_below="@+id/icon1"
                android:layout_height="wrap_content"
                >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_description_box"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="11dp"
                    android:text="@string/safety_1_1"
                    android:textColor="#FF0000"
                    android:textSize="@dimen/text_size_safety"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:text="@string/safety_1_2"
                    android:textColor="#FF0000"
                    android:textSize="@dimen/text_size_safety"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:text="@string/safety_1_3"
                    android:textColor="#000000"
                    android:textSize="@dimen/text_size_safety"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:text="@string/safety_1_4"
                    android:textColor="#000000"
                    android:textSize="@dimen/text_size_safety"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:text="@string/safety_1_5"
                    android:textColor="#000000"
                    android:textSize="@dimen/text_size_safety"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:text="@string/safety_1_6"
                    android:textColor="#000000"
                    android:textSize="@dimen/text_size_safety"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:text="@string/safety_1_7"
                    android:textColor="#000000"
                    android:textSize="@dimen/text_size_safety"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:text="@string/safety_1_8"
                    android:textColor="#000000"
                    android:textSize="@dimen/text_size_safety"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:text="@string/safety_1_9"
                    android:textColor="#000000"
                    android:textSize="@dimen/text_size_safety"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:text="@string/safety_1_10"
                    android:textColor="#FF0000"
                    android:textSize="@dimen/text_size_safety"
                    android:textStyle="bold" />

            </LinearLayout>

            </ScrollView>
        </RelativeLayout>



    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_side_list_id"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header_side_list"
        app:menu="@menu/side_list_navigation">

    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>