<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_safety5_id"
    tools:context=".Saftey5">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/header_id"
                layout="@layout/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp" />

            <ImageView
                android:id="@+id/icon5"
                android:layout_width="115dp"
                android:layout_height="104dp"
                android:layout_below="@+id/header_id"
                android:layout_alignParentStart="true"
                android:layout_marginStart="143dp"
                android:layout_marginTop="6dp"
                app:srcCompat="@drawable/coma" />
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/icon5"
               >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="200dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/bg_description_box"
                android:orientation="vertical"
                android:padding="10dp"
                >


                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:text="@string/safety_5_1"
                    android:textColor="#FF0000"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView38"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/convergence"
                    android:gravity="center"
                    android:paddingTop="17dp"
                    android:text="@string/safety_5_2"
                    android:textColor="#000000"
                    android:textSize="@dimen/text_size_safety"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView39"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/convergence"
                    android:gravity="center"
                    android:paddingTop="17dp"
                    android:text="@string/safety_5_3"
                    android:textColor="#000000"
                    android:textSize="@dimen/text_size_safety"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView40"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/convergence"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingTop="17dp"
                    android:text="@string/safety_5_4"
                    android:textColor="#000000"
                    android:textSize="@dimen/text_size_safety"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView41"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/convergence"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingTop="17dp"
                    android:text="@string/safety_5_5"
                    android:textColor="#000000"
                    android:textSize="@dimen/text_size_safety"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView42"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/convergence"
                    android:gravity="center"
                    android:paddingTop="17dp"
                    android:text="@string/safety_5_6"
                    android:textColor="#000000"
                    android:textSize="@dimen/text_size_safety"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView43"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/convergence"
                    android:gravity="center"
                    android:paddingStart="8dp"
                    android:paddingTop="17dp"
                    android:text="@string/safety_5_7"
                    android:textColor="#000000"
                    android:textSize="@dimen/text_size_safety"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView44"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/convergence"
                    android:gravity="center"
                    android:paddingTop="17dp"
                    android:text="@string/safety_5_8"
                    android:textColor="#000000"
                    android:textSize="@dimen/text_size_safety"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView45"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/convergence"
                    android:gravity="center"
                    android:paddingTop="20dp"
                    android:text="@string/safety_5_9"
                    android:textColor="#FF0000"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold" />

            </LinearLayout>

    </ScrollView>
        </RelativeLayout>



    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_side_list_id"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header_side_list"
        app:menu="@menu/side_list_navigation">

    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>