<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_safety4_id"
    tools:context=".Saftey4">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <include
        android:id="@+id/header_id"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="83dp"
            android:layout_height="82dp"
            android:layout_below="@+id/header_id"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="163dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="165dp"
            app:srcCompat="@drawable/fireextinguisher" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/imageView5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="476dp"
            android:layout_below="@+id/imageView5"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:padding="10dp"
            android:background="@drawable/bg_description_box"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/safety_4_1"
                android:textColor="#FF0000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/safety_4_2"
                android:textColor="#000000"
                android:textColorLink="#050101"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/safety_4_3"
                android:textColor="#000000"
                android:textColorLink="#050101"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/safety_4_4"
                android:textColor="#000000"
                android:textColorLink="#050101"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/safety_4_5"
                android:textColor="#000000"
                android:textColorLink="#050101"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
        </ScrollView>

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_side_list_id"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header_side_list"
        app:menu="@menu/side_list_navigation"
        />
</androidx.drawerlayout.widget.DrawerLayout>
